# stutter-asr-eval

./: .gitignore  LICENSE  README.md  environment-full.yml  environment.yml  pyproject.toml  todo.md
configs/: default.yaml
docs/: meeting_on_directions.md  report_on_asr.md  report_on_asr_and_stuttering.md  report_on_comparitive_asr.md
src/: __init__.py
src/data/: __init__.py  datasets.py  preprocessing.py
src/evaluation/: __init__.py  metrics.py
src/finetuning/: __init__.py
src/models/: __init__.py  base.py  hubert_model.py  wav2vec2_model.py  whisper_model.py
src/models/api/: __init__.py  amazon_transcribe.py  assemblyai_stt.py  azure_stt.py  deepgram_stt.py  google_stt.py
src/utils/: __init__.py  config.py
